@@ -5,6 +5,7 @@
    * Add --TXXX support. (#62, Tim Phipps)
    * Add --POPM support. (#71)
    * Allow setting multiple COMM or TXXX frames with one command line.
+ * FLAC: Try to handle corrupt Vorbis comment block sizes. (#52)
  * ID3:
    * MakeID3v1: Do not generate bad tags when given short dates. (#69)
    * ParseID3v1: Parse short (< 128 byte) tags generated by old Mutagen
